--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Malla Interactiva</title>
+  <link rel="stylesheet" href="estilos.css">
+</head>
+<body>
+  <h1>Malla Interactiva - Auditoría</h1>
+  <div id="malla"></div>
 
+  <script src="script.js"></script>
+</body>
+</html>
