--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Malla Interactiva</title>
+  <title>Malla Interactiva UV</title>
   <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
-  <h1>Malla Interactiva - Auditoría</h1>
-  <div id="malla"></div>
+  <h1>Malla Interactiva Auditoría UV</h1>
+  <div class="malla" id="malla"></div>
 
   <script src="script.js"></script>
 </body>
